--- a/currency-converter-app/src/index.css
+++ b/currency-converter-app/src/index.css
@@ -1,13 +1,92 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  align-self: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: proxima-nova, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 400px;
+  width: 80%;
+}
+
+.title,
+.description,
+.userInputs,
+.instructions,
+.exchangeRates {
+  align-self: center;
+  font-family: inherit;
+}
+
+.description {
+  color: gray;
+  text-align: center;
+}
+
+.userInputs {
+  background-color: aliceblue;
+  padding: 10px 0px;
+  position: relative;
+}
+
+.userAmountInput {
+  align-self: center;
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 30px;
+  margin-left: 5%;
+  width: 60%;
+}
+
+.userAmountInput::placeholder {
+  color: gray;
+}
+​ input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
+}
+
+.instructions {
+  color: gray;
+  font-size: 10px;
+}
+
+.exchangeRates {
+  width: 85%;
+}
+
+.currencyExchange {
+  display: grid;
+  grid-template-columns: 80% 20%;
+  font-size: 20px;
+}
+
+.currencyName {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.currencyLogo {
+  height: 20px;
+  width: 20px;
+}
+
+.currency {
+  font-size: 15px;
 }
